IllinoisGRMHD: apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs -- Finished the discussion of the enforce_limits_on_primitives_and_recompute_conservs() function. Need to finish the sectioning (i.e. numbering and ToC entries).

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
@@ -216,9 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
     "\n",
@@ -266,9 +274,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
     "\n",
@@ -305,9 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
     "\n",
@@ -367,9 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
     "\n",
@@ -397,9 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
     "\n",
@@ -423,9 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
     "\n",
@@ -452,9 +500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
     "\n",
@@ -503,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -549,12 +605,18 @@
     "<a id='enforce_limits_on_primitives_and_recompute_conservs'></a>\n",
     "\n",
     "# Step 3: `The IllinoisGRMHD_ enforce_limits_on_primitives_and_recompute_conservs function` \\[Back to [top](#toc)\\]\n",
-    "$$\\label{enforce_limits_on_primitives_and_recompute_conservs}$$"
+    "$$\\label{enforce_limits_on_primitives_and_recompute_conservs}$$\n",
+    "\n",
+    "We start by imposing physical limits on the primitive variables $\\left\\{\\rho_{b},P,v^{i}\\right\\}$, using:\n",
+    "\n",
+    "1. $\\rho_{b} \\to \\min\\left(\\rho_{b},\\rho_{b,{\\rm atm}}\\right)$\n",
+    "1. `enforce_pressure_floor_ceiling()`: documented in the [`inlined_functions.C`](Tutorial-IllinoisGRMHD__inlined_functions.ipynb) tutorial module.\n",
+    "1. `impose_speed_limit_output_u0()`: documented in the [`inlined_functions.C`](Tutorial-IllinoisGRMHD__inlined_functions.ipynb) tutorial module."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +669,32 @@
     "  for(int ii=0;ii<3;ii++) uUP[UX+ii] = uUP[0]*U[VX+ii];\n",
     "\n",
     "  // Useful debugging tool, part 2: can be used to track fixes:\n",
-    "  //if(P_orig!=U[PRESSURE] || rho_b_orig!=U[RHOB] || vx_orig!=U[VX] || vy_orig!=U[VY] || vz_orig!=U[VZ]) {\n",
+    "  //if(P_orig!=U[PRESSURE] || rho_b_orig!=U[RHOB] || vx_orig!=U[VX] || vy_orig!=U[VY] || vz_orig!=U[VZ]) {"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we compute quantities associted with $b^{i}$, using the `compute_smallba_b2_and_u_i_over_u0_psi4()` function which is documented in the [`inlined_functions.C`](Tutorial-IllinoisGRMHD__inlined_functions.ipynb) tutorial module. We also compute $u_{i}$ from the output of the `compute_smallba_b2_and_u_i_over_u0_psi4()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
+    "\n",
     "\n",
     "  /***************************************************************/\n",
     "  // COMPUTE TUPMUNU, TDNMUNU, AND  CONSERVATIVES FROM PRIMITIVES\n",
@@ -619,7 +706,40 @@
     "  compute_smallba_b2_and_u_i_over_u0_psi4(METRIC,METRIC_LAP_PSI4,U,uUP[0],ONE_OVER_LAPSE_SQRT_4PI,\n",
     "                                          u_x_over_u0_psi4,u_y_over_u0_psi4,u_z_over_u0_psi4,smallb);\n",
     "  // Compute u_i; we compute u_0 below.\n",
-    "  CCTK_REAL uDN[4] = { 1e200, u_x_over_u0_psi4*uUP[0]*METRIC_LAP_PSI4[PSI4],u_y_over_u0_psi4*uUP[0]*METRIC_LAP_PSI4[PSI4],u_z_over_u0_psi4*uUP[0]*METRIC_LAP_PSI4[PSI4] };\n",
+    "  CCTK_REAL uDN[4] = { 1e200, u_x_over_u0_psi4*uUP[0]*METRIC_LAP_PSI4[PSI4],u_y_over_u0_psi4*uUP[0]*METRIC_LAP_PSI4[PSI4],u_z_over_u0_psi4*uUP[0]*METRIC_LAP_PSI4[PSI4] };"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we start evaluating the physical ADM inverse 4-metric, $g^{\\mu\\nu}$ (eq. 2.119 in [Numerical Relativity, by Baumgarte & Shapiro](https://books.google.com/books/about/Numerical_Relativity.html?id=dxU1OEinvRUC))\n",
+    "\n",
+    "$$\n",
+    "g^{\\mu\\nu} =\n",
+    "\\begin{pmatrix}\n",
+    "-\\alpha^{-2} & \\alpha^{-2}\\beta^{i}\\\\\n",
+    "\\alpha^{-2}\\beta^{j} & \\gamma^{ij} - \\alpha^{-2}\\beta^{i}\\beta^{j}\n",
+    "\\end{pmatrix}\\ .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
+    "\n",
     "  \n",
     "  // Precompute some useful quantities, for later:\n",
     "  CCTK_REAL alpha_sqrt_gamma=METRIC_LAP_PSI4[LAPSE]*METRIC_LAP_PSI4[PSI6]; \n",
@@ -642,13 +762,83 @@
     "    g4up[2][2] = METRIC[GUPYY]*METRIC_LAP_PSI4[PSIM4] - ONE_OVER_LAPSE_SQUARED*METRIC[SHIFTY]*METRIC[SHIFTY];\n",
     "    g4up[2][3] = METRIC[GUPYZ]*METRIC_LAP_PSI4[PSIM4] - ONE_OVER_LAPSE_SQUARED*METRIC[SHIFTY]*METRIC[SHIFTZ];\n",
     "    g4up[3][3] = METRIC[GUPZZ]*METRIC_LAP_PSI4[PSIM4] - ONE_OVER_LAPSE_SQUARED*METRIC[SHIFTZ]*METRIC[SHIFTZ];\n",
-    "  }\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we compute the stress-energy tensor, $T^{\\mu\\nu}$, which is given by eq. (8) in [Etienne *et al.* (2015)](https://arxiv.org/pdf/1501.07276.pdf):\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\n",
+    "T^{\\mu\\nu} = \\left(\\rho_{0}h+b^{2}\\right)u^{\\mu}u^{\\nu} + \\left(P + \\frac{b^{2}}{2}\\right)g^{\\mu\\nu} - b^{\\mu}b^{\\nu}\n",
+    "}\\ .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
+    "\n",
     "\n",
     "  int count;\n",
     "  // Next compute T^{\\mu \\nu}. This is very useful when computing fluxes and source terms in the GRMHD evolution equations.\n",
     "  // (Eq. 33 in http://arxiv.org/pdf/astro-ph/0503420.pdf):\n",
     "  // T^{mn} = (rho_0 h + b^2) u^m u^n + (P + 0.5 b^2) g^{mn} - b^m b^n, where m and n both run from 0 to 3.\n",
-    "  count=0; for(int ii=0;ii<4;ii++) for(int jj=ii;jj<4;jj++) { TUPMUNU[count] = rho0_h_plus_b2*uUP[ii]*uUP[jj] + P_plus_half_b2*g4up[ii][jj] - smallb[SMALLBT+ii]*smallb[SMALLBT+jj]; count++; }\n",
+    "  count=0; for(int ii=0;ii<4;ii++) for(int jj=ii;jj<4;jj++) { TUPMUNU[count] = rho0_h_plus_b2*uUP[ii]*uUP[jj] + P_plus_half_b2*g4up[ii][jj] - smallb[SMALLBT+ii]*smallb[SMALLBT+jj]; count++; }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we wish to compute the stress-energy tensor, $T_{\\mu\\nu}$, which is given by\n",
+    "\n",
+    "$$\n",
+    "T_{\\mu\\nu} = \\left(\\rho_{0}h+b^{2}\\right)u_{\\mu}u_{\\nu} + \\left(P + \\frac{b^{2}}{2}\\right)g_{\\mu\\nu} - b_{\\mu}b_{\\nu}\\ .\n",
+    "$$\n",
+    "\n",
+    "We start by setting up the physical ADM 4-metric, $g_{\\mu\\nu}$ (eq. 2.122 in [Numerical Relativity, by Baumgarte & Shapiro](https://books.google.com/books/about/Numerical_Relativity.html?id=dxU1OEinvRUC))\n",
+    "\n",
+    "$$\n",
+    "\\boxed{g_{\\mu\\nu} =\n",
+    "\\begin{pmatrix}\n",
+    "-\\alpha^{2} + \\beta_{\\ell}\\beta^{\\ell} & \\beta_{i}\\\\\n",
+    "\\beta_{j} & \\gamma_{ij}\n",
+    "\\end{pmatrix}}\\ .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
+    "\n",
     "\n",
     "  // Next compute T_{\\mu \\nu}\n",
     "  // T_{mn} = (rho_0 h + b^2) u_m u_n + (P + 0.5 b^2) g_{mn} - b_m b_n, where m and n both run from 0 to 3.\n",
@@ -671,19 +861,114 @@
     "    g4dn[2][2] =              METRIC[GYY]*METRIC_LAP_PSI4[PSI4];\n",
     "    g4dn[2][3] = g4dn[3][2] = METRIC[GYZ]*METRIC_LAP_PSI4[PSI4];\n",
     "    g4dn[3][3] =              METRIC[GZZ]*METRIC_LAP_PSI4[PSI4];\n",
-    "  }\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we compute $b_{\\mu} = g_{\\mu\\nu}b^{\\nu}$ and $u_{0} = g_{0\\mu}u^{\\mu}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
+    "\n",
     "\n",
     "  CCTK_REAL smallb_lower[NUMVARS_SMALLB];\n",
+    "  // Leo says: This could be replaced by the function call\n",
+    "  //           lower_4vector_output_spatial_part(psi4,smallb,smallb_lower);\n",
     "  // b_a = b^c g_{ac}\n",
     "  for(int ii=0;ii<4;ii++) { smallb_lower[SMALLBT+ii]=0; for(int jj=0;jj<4;jj++) smallb_lower[SMALLBT+ii] += smallb[SMALLBT+jj]*g4dn[ii][jj]; }\n",
     "\n",
     "  // Compute u_0, as we've already computed u_i above.\n",
-    "  uDN[0]=0.0; for(int jj=0;jj<4;jj++) uDN[0] += uUP[jj]*g4dn[0][jj];\n",
+    "  uDN[0]=0.0; for(int jj=0;jj<4;jj++) uDN[0] += uUP[jj]*g4dn[0][jj];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, compute\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\n",
+    "T_{\\mu\\nu} = \\left(\\rho_{0}h+b^{2}\\right)u_{\\mu}u_{\\nu} + \\left(P + \\frac{b^{2}}{2}\\right)g_{\\mu\\nu} - b_{\\mu}b_{\\nu}\n",
+    "}\\ .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
+    "\n",
     "\n",
     "  // Compute T_{\\mu \\nu}\n",
     "  if(update_Tmunu) {\n",
     "    count=0; for(int ii=0;ii<4;ii++) for(int jj=ii;jj<4;jj++) { TDNMUNU[count] = rho0_h_plus_b2*uDN[ii]*uDN[jj] + P_plus_half_b2*g4dn[ii][jj] - smallb_lower[SMALLBT+ii]*smallb_lower[SMALLBT+jj]; count++; }\n",
-    "  }\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, compute the conservative variables\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\n",
+    "\\left\\{\n",
+    "\\begin{align}\n",
+    "\\rho_{\\star}  &= \\alpha\\sqrt{\\gamma}\\rho_{b}u^{0}\\\\\n",
+    "\\tilde{S}_{i} &= \\left(\\rho_{\\star}h + \\alpha\\sqrt{\\gamma}u^{0}b^{2}\\right)u_{i} - \\alpha\\sqrt{\\gamma}b^{0}b_{i}\\\\\n",
+    "\\tilde{\\tau}  &= \\alpha^{2}\\sqrt{\\gamma}T^{00} - \\rho_{\\star}\n",
+    "\\end{align}\n",
+    "\\right.\n",
+    "}\\ .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__tau_and_prim_limits__C\n",
+    "\n",
     "\n",
     "  //CCTK_VInfo(CCTK_THORNSTRING,\"YAY %e\",TDNMUNU[0]);\n",
     "\n",
@@ -714,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -723,15 +1008,14 @@
      "text": [
       "Validation test for apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C: FAILED!\n",
       "Diff:\n",
-      "270a271,278\n",
-      ">   // Leo asks: We have TUPMUNU as an input. We have also updated it above.\n",
-      ">   //           Why is it, then, that the expression for T^{00} is coded\n",
-      ">   //           'by hand' when computing CONSERVS[TAUENERGY]? Wouldn't it\n",
-      ">   //           be correct to replace\n",
-      ">   //\n",
-      ">   // (rho0_h_plus_b2*SQR(uUP[0]) + P_plus_half_b2*(-SQR(METRIC_LAP_PSI4[LAPSEINV])) - SQR(smallb[SMALLBT]))\n",
-      ">   //\n",
-      ">   // by TUP00 = TUPMUNU[0]?\n"
+      "98a99,100\n",
+      ">   // Leo says: the operation below could be replaced by\n",
+      ">   //           Patm = kpoly*fasterpow_ppm_reconstruct(rho_b_atm,gamma)\n",
+      "250a253,254\n",
+      ">   // Leo says: This could be replaced by the function call\n",
+      ">   //           lower_4vector_output_spatial_part(psi4,smallb,smallb_lower);\n",
+      "270a275\n",
+      ">   // Leo says: We have TUPMUNU already, should replace           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ by TUPMUNU[0].\n"
      ]
     }
    ],
@@ -786,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +1078,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb to latex\n",
-      "[NbConvertApp] Writing 58007 bytes to Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\n",
+      "[NbConvertApp] Writing 72305 bytes to Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
