GiRaFFE: Fixed a missing function call preventing a file from being opened.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
@@ -79,17 +79,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: cannot remove 'ScalarWaveCurvilinear_Playground_Ccodes': No such file or directory\n",
-      "Wrote to file \"GiRaFFE_standalone_Ccodes/ds_dirn.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone_Ccodes/xxCart.h\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step P1: First we import needed core NRPy+ modules\n",
     "from outputC import *\n",
@@ -144,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,16 +177,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to file \"GiRaFFE_standalone_Ccodes/ds_dirn.h\"\n",
+      "Wrote to file \"GiRaFFE_standalone_Ccodes/xxCart.h\"\n"
+     ]
+    }
+   ],
    "source": [
     "#################\n",
     "# Next output C headers related to the numerical grids we just set up:\n",
     "#################\n",
     "\n",
     "# First output the coordinate bounds xxmin[] and xxmax[]:\n",
-    "with open(outdir,\"xxminmax.h\", \"w\") as file:\n",
+    "with open(os.path.join(outdir,\"xxminmax.h\"), \"w\") as file:\n",
     "    file.write(\"const REAL xxmin[3] = {\"+str(rfm.xxmin[0])+\",\"+str(rfm.xxmin[1])+\",\"+str(rfm.xxmin[2])+\"};\\n\")\n",
     "    file.write(\"const REAL xxmax[3] = {\"+str(rfm.xxmax[0])+\",\"+str(rfm.xxmax[1])+\",\"+str(rfm.xxmax[2])+\"};\\n\")\n",
     "\n",
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -597,9 +596,7 @@
       "Auxiliary gridfunction \"gammaUU22\" has parity type 9.\n",
       "Auxiliary gridfunction \"gammadet\" has parity type 0.\n",
       "Auxiliary gridfunction \"u4upperZero\" has parity type 0.\n",
-      "Wrote to file \"GiRaFFE_standalone_Ccodes/boundary_conditions/xxCart.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone_Ccodes/boundary_conditions/xxminmax.h\"\n",
-      "Wrote to file \"GiRaFFE_standalone_Ccodes/boundary_conditions/Cart_to_xx.h\"\n"
+      "Wrote to file \"GiRaFFE_standalone_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n"
      ]
     }
    ],
@@ -621,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,14 +641,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+      "Writing GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
      ]
     }
    ],
@@ -686,9 +683,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
@@ -709,9 +714,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
@@ -760,9 +773,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
@@ -791,9 +812,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
@@ -825,9 +854,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
@@ -852,9 +889,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
@@ -886,9 +931,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
@@ -942,9 +995,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
@@ -1021,9 +1082,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to GiRaFFE_standalone_Ccodes//GiRaFFE_standalone.c\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
@@ -1247,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1260,9 +1329,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops GiRaFFE_standalone_Ccodes/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm`...\n",
-      "Finished executing in 2.0308740139 seconds.\n",
+      "Finished executing in 2.03529191017 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 2.04716491699 seconds.\n",
+      "Finished in 2.05055999756 seconds.\n",
       "\n",
       "\n",
       "Now running at low resolution. Should take ~20 seconds...\n",
@@ -1273,37 +1342,21 @@
       "# Timestep set to = 1.562500e-02\n",
       "Writing output...\n",
       "Writing EXACT output...\n",
-      "Writing output...| 7.0%; ETA 1178 s | t/h 5.68 | gp/s 6.78e+06\n",
+      "Writing output...| 7.0%; ETA 1163 s | t/h 5.76 | gp/s 6.87e+06\n",
       "Writing EXACT output...\n",
-      "Writing output... | 14.8%; ETA 1013 s | t/h 6.05 | gp/s 7.22e+06\n",
+      "Writing output... | 14.8%; ETA 1000 s | t/h 6.13 | gp/s 7.31e+06\n",
       "Writing EXACT output...\n",
-      "Writing output... | 22.7%; ETA 901 s | t/h 6.18 | gp/s 7.37e+066\n",
+      "Writing output... | 22.7%; ETA 889 s | t/h 6.26 | gp/s 7.47e+06\n",
       "Writing EXACT output...\n",
-      "Writing output... | 30.5%; ETA 804 s | t/h 6.23 | gp/s 7.43e+06\n",
+      "Writing output... | 30.5%; ETA 790 s | t/h 6.33 | gp/s 7.56e+06\n",
       "Writing EXACT output...\n",
-      "Writing output... | 38.3%; ETA 713 s | t/h 6.23 | gp/s 7.44e+06\n",
-      "Writing EXACT output...\n",
-      "Writing output... | 46.1%; ETA 622 s | t/h 6.24 | gp/s 7.44e+06\n",
-      "Writing EXACT output...\n",
-      "Writing output... | 53.9%; ETA 532 s | t/h 6.24 | gp/s 7.45e+06\n",
-      "Writing EXACT output...\n",
-      "Writing output... | 61.7%; ETA 442 s | t/h 6.24 | gp/s 7.45e+06\n",
-      "Writing EXACT output...\n",
-      "Writing output... | 69.5%; ETA 352 s | t/h 6.23 | gp/s 7.44e+06\n",
-      "Writing EXACT output...\n",
-      "Writing output... | 77.3%; ETA 262 s | t/h 6.23 | gp/s 7.43e+06\n",
-      "Writing EXACT output...\n",
-      "Writing output...0 | 85.2%; ETA 172 s | t/h 6.23 | gp/s 7.43e+06\n",
-      "Writing EXACT output...\n",
-      "Writing output...6 | 93.0%; ETA 81 s | t/h 6.22 | gp/s 7.42e+066\n",
-      "Writing EXACT output...\n",
-      "\u001b[2KIt: 128 t=2.00 | 100.0%; ETA 0 s | t/h 6.21 | gp/s 7.41e+06\n",
-      "Finished in 1161.92960095 seconds.\n",
+      "^C2KIt: 47 t=0.73 | 36.7%; ETA 717 s | t/h 6.36 | gp/s 7.58e+06\n",
+      "Finished in 424.736271858 seconds.\n",
       "\n",
       "\n",
       "Now running at medium resolution. Should take ~300 seconds...\n",
       "\n",
-      "Finished in 2.59876251221e-05 seconds.\n",
+      "Finished in 2.28881835938e-05 seconds.\n",
       "\n",
       "\n"
      ]
@@ -1327,7 +1380,7 @@
     "start = time.time()\n",
     "#cmd.Execute(\"GiRaFFE_standalone_1D\", \"1280 2 2 0.5\")\n",
     "# Switching back to see more output\n",
-    "!taskset -c 0,1 ./GiRaFFE_standalone_1D 256 256 256 0.5\n",
+    "!taskset -c 0,1 ./GiRaFFE_standalone_1D 1280 2 2 0.5\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
@@ -1351,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1518,9 +1571,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb to latex\n",
+      "[NbConvertApp] Writing 141036 bytes to Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.tex\n",
