--- a/Tutorial-ETK_thorn-MaxwellEvol.ipynb
+++ b/Tutorial-ETK_thorn-MaxwellEvol.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
+    "<script>\n",
+    "  window.dataLayer = window.dataLayer || [];\n",
+    "  function gtag(){dataLayer.push(arguments);}\n",
+    "  gtag('js', new Date());\n",
+    "\n",
+    "  gtag('config', 'UA-59152712-8');\n",
+    "</script>\n",
+    "\n",
     "# MaxwellEvol: Solving Maxwell's Equations in the Einstein Toolkit with the Method of Lines\n",
     "\n",
     "## Author: Zach Etienne\n",
