--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
+    "<script>\n",
+    "  window.dataLayer = window.dataLayer || [];\n",
+    "  function gtag(){dataLayer.push(arguments);}\n",
+    "  gtag('js', new Date());\n",
+    "\n",
+    "  gtag('config', 'UA-59152712-8');\n",
+    "</script>\n",
+    "\n",
     "# sbPoynETNRPy: An Einstein Toolkit Thorn for Computing the 4-Velocity Time-Component $u^0$, the Magnetic Field Measured by a Comoving Observer $b^{\\mu}$, and the Poynting Vector $S^i$\n",
     "\n",
     "## Author: Zach Etienne\n",
