--- a/Tutorial-Finite_Difference_Derivatives-FDtable_soln.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives-FDtable_soln.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
+    "<script>\n",
+    "  window.dataLayer = window.dataLayer || [];\n",
+    "  function gtag(){dataLayer.push(arguments);}\n",
+    "  gtag('js', new Date());\n",
+    "\n",
+    "  gtag('config', 'UA-59152712-8');\n",
+    "</script>\n",
+    "\n",
     "# Creating the Finite-Difference Table for Centered First and Second  Derivatives, from 2nd through 10th-Order Accuracy\n",
     "\n",
     "## *Courtesy Brandon Clark*"
