--- a/Tutorial-Indexed_Expressions-soln.ipynb
+++ b/Tutorial-Indexed_Expressions-soln.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
+    "<script>\n",
+    "  window.dataLayer = window.dataLayer || [];\n",
+    "  function gtag(){dataLayer.push(arguments);}\n",
+    "  gtag('js', new Date());\n",
+    "\n",
+    "  gtag('config', 'UA-59152712-8');\n",
+    "</script>\n",
+    "\n",
     "# The NRPy+ code required to generate the needed C code for the lowering operator: $g_{ij} \\beta^i$, with the result set to C variables \"$\\texttt{betaD0out}$\", \"$\\texttt{betaD1out}$\", and \"$\\texttt{betaD2out}$\" \n",
     "\n",
     "## *Courtesy Zach Etienne*"
