--- a/Tutorial-RK_Butcher_Table_Validation.ipynb
+++ b/Tutorial-RK_Butcher_Table_Validation.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
+    "<script>\n",
+    "  window.dataLayer = window.dataLayer || [];\n",
+    "  function gtag(){dataLayer.push(arguments);}\n",
+    "  gtag('js', new Date());\n",
+    "\n",
+    "  gtag('config', 'UA-59152712-8');\n",
+    "</script>\n",
+    "\n",
     "# Validating Runge Kutta Butcher tables using Truncated Taylor Series\n",
     "## Authors: Zach Etienne & Brandon Clark\n",
     "\n",
