--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
+    "<script>\n",
+    "  window.dataLayer = window.dataLayer || [];\n",
+    "  function gtag(){dataLayer.push(arguments);}\n",
+    "  gtag('js', new Date());\n",
+    "\n",
+    "  gtag('config', 'UA-59152712-8');\n",
+    "</script>\n",
+    "\n",
     "# Start-to-Finish Example: [TOV](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) Neutron Star Simulation: The \"Hydro without Hydro\" Test\n",
     "\n",
     "## Authors: Zach Etienne & Phil Chang\n",
