--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests_oldBCs.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests_oldBCs.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<script async src=\"https://www.googletagmanager.com/gtag/js?id=UA-59152712-8\"></script>\n",
+    "<script>\n",
+    "  window.dataLayer = window.dataLayer || [];\n",
+    "  function gtag(){dataLayer.push(arguments);}\n",
+    "  gtag('js', new Date());\n",
+    "\n",
+    "  gtag('config', 'UA-59152712-8');\n",
+    "</script>\n",
+    "\n",
     "# Start-to-Finish Example: $\\text{GiRaFFE_HO}$ 1D tests\n",
     "\n",
     "### Author: Patrick Nelson\n",
